updated with pdf links

--- a/app/views/8-0/rules-years.html
+++ b/app/views/8-0/rules-years.html
@@ -197,9 +197,9 @@
                     </div>
                 </div>
                 <div class="column-two-thirds">
-                    <!-- <p class="gem-c-lead-paragraph ">
-                        The rules that will apply to all apprenticeship provision funded by the ESFA.
-                    </p> -->
+                    <p class="gem-c-lead-paragraph ">
+                        Information about the rules for the government funding that covers the costs of off-the-job training for apprentices in England.
+                    </p>
                 </div>
             </div>
 
@@ -308,6 +308,13 @@
                                     <li><a href="manual-home?manual={{_providerManual}}">training providers</a></li>
                                 </ul>
 
+                                <p class="govuk-body">You can also download the latest apprenticeship funding rules as PDF files:</p>
+                                <ul class="govuk-list  govuk-list--bullet" >
+                                    <li><a href="#">employers</a> (PDF, 500KB, 50 pages)</li>
+                                    <li><a href="#">employer-providers</a> (PDF, 500KB, 50 pages)</li>
+                                    <li><a href="#">training providers</a> (PDF, 500KB, 50 pages)</li>
+                                </ul>
+
                                 <h3 class="gem-c-heading  gem-c-heading--mobile-top-margin" id="other">
                                     Other documents
                                 </h3>
@@ -316,13 +323,13 @@
                                 <ul class="govuk-list govuk-list--bullet">
                                     <li>
                                         <a href="https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/733039/1819_Funding_Rules_Summary_of_Changes_1.0.pdf">
-                                            apprenticeship funding rules 2018 to 2019: summary of changes (PDF, 500KB)
-                                        </a>
+                                            apprenticeship funding rules 2018 to 2019: summary of changes
+                                        </a> (PDF, 500KB, 50 pages)
                                     </li>
                                     <li>
                                         <a href="https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/733046/Apps_1819_PM_rules_.pdf">
-                                            apprenticeship performance management rules for training providers (PDF, 640KB)
-                                        </a>
+                                            apprenticeship performance management rules for training providers
+                                        </a> (PDF, 500KB, 50 pages)
                                     </li>
                                 </ul>
 
@@ -340,18 +347,18 @@
                                 <ul class="govuk-list govuk-list--bullet">
                                     <li>
                                         <a href="https://www.gov.uk/government/uploads/system/uploads/attachment_data/file/706505/Employer_rules_v3.pdf">
-                                            employers (PDF, 640KB)
-                                        </a>
+                                            employers
+                                        </a> (PDF, 500KB, 50 pages)
                                     </li>
                                     <li>
                                         <a href="https://www.gov.uk/government/uploads/system/uploads/attachment_data/file/706506/Employer_provider_v3.pdf">
-                                            employer-providers (PDF, 640KB)
-                                        </a>
+                                            employer-providers
+                                        </a> (PDF, 500KB, 50 pages)
                                     </li>
                                     <li>
                                         <a href="https://www.gov.uk/government/uploads/system/uploads/attachment_data/file/706507/Provider_v6.pdf">
-                                            training providers (PDF, 640KB)
-                                        </a>
+                                            training providers
+                                        </a> (PDF, 500KB, 50 pages)
                                     </li>
                                 </ul>
 
@@ -362,14 +369,10 @@
                                 <p>You can also view:</p>
                                 <ul class="govuk-list govuk-list--bullet">
                                         <li>
-                                            <a href="https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/697128/Summary_of_changes.pdf">
-                                                apprenticeship funding and performance management rules 2017 to 2018: summary of changes (PDF, 640KB)
-                                            </a>
+                                            <a href="https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/697128/Summary_of_changes.pdf">apprenticeship funding and performance management rules 2017 to 2018: summary of changes</a> (PDF, 500KB, 50 pages)
                                         </li>
                                         <li>
-                                            <a href="https://www.gov.uk/government/uploads/system/uploads/attachment_data/file/611724/Subcontracting_addendum__003_.pdf">
-                                                apprenticeship funding and performance management rules - addendum 1 (PDF, 640KB)
-                                            </a>
+                                            <a href="https://www.gov.uk/government/uploads/system/uploads/attachment_data/file/611724/Subcontracting_addendum__003_.pdf">apprenticeship funding and performance management rules - addendum 1</a> (PDF, 500KB, 50 pages)
                                         </li>
                                     </ul>
 
@@ -378,46 +381,7 @@
                                         </h2>
                                         <p class="govuk-body"><a href="https://www.gov.uk/government/collections/sfa-funding-rules-2016-to-2017">View the 2016 to 2017 funding rules</a> for apprenticeships that started between 1 August 2016 and 31 July 2017.
                                         </p>
-
-                                <!-- <h2 class="gem-c-heading  gem-c-heading--mobile-top-margin" id="2016">
-                                    2016 to 2017 rules
-                                </h2>
-
-                                <p class="govuk-body">Rules for 2016 to 2017 apply to apprenticeships that started between 1 August 2016 and 31 July 2017:</p>
-
-                                <ul class="govuk-list govuk-list--bullet">
-                                        <li>
-                                            <a href="https://www.gov.uk/government/uploads/system/uploads/attachment_data/file/611725/Apprenticeships_common_funding_and_pm_rules_2016_to_2017_V5.pdf">
-                                                apprenticeships: common funding and performance-management rules (PDF, 640KB)
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="https://www.gov.uk/government/uploads/system/uploads/attachment_data/file/595360/Apprenticeship_Framework_Funding_Rules_2016_to_2017_V4.pdf">
-                                                apprenticeship frameworks funding and AGE performance-management rules (PDF, 640KB)
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="https://www.gov.uk/government/uploads/system/uploads/attachment_data/file/604968/HEI_funding_rules.pdf">
-                                                apprenticeship funding rules for higher education institutions (PDF, 640KB)
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="https://www.gov.uk/government/uploads/system/uploads/attachment_data/file/604972/Apprenticeship_standards_funding_rules_2016_to_2017_v2_FINAL.pdf">
-                                                apprenticeship standards funding rules (PDF, 640KB)
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="https://www.gov.uk/government/uploads/system/uploads/attachment_data/file/545722/Adult_education_budget_funding_and_performance_management_rules_2016_to_2017_V3.pdf">
-                                                adult education budget funding and performance-management rules (PDF, 640KB)
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="https://www.gov.uk/government/uploads/system/uploads/attachment_data/file/604976/SFA_common_and_performance_management_funding_rules_2016_to_2017_V3.pdf">
-                                                Skills Funding Agency: common and performance-management funding rules (PDF, 640KB)
-                                            </a>
-                                        </li>
-                                    </ul> -->
-
+                                
                                 <h2 class="gem-c-heading  gem-c-heading--mobile-top-margin" id="previous">Previous rules</h2>
                                 <p class="govuk-body"><a href="https://www.gov.uk/guidance/sfa-funding-rules">View previous funding rules</a> for apprenticeships that started before 1 August 2016.</p>
 
