--- a/app/views/8-0/rules-years.html
+++ b/app/views/8-0/rules-years.html
@@ -300,7 +300,7 @@
                                     {% set _employerproviderManual = myData.manuals[myData.manual].id %}
                                 {% endif %}
 
-                                <p class="govuk-body">The 2018 to 2019 rules apply to apprenticeships starting on or after 1 August 2018. You can view the apprenticeship funding rules for:</p>
+                                <p class="govuk-body">The 2018 to 2019 rules apply to apprenticeships starting on or after 1 August 2018. View the apprenticeship funding rules for:</p>
 
                                 <ul class="govuk-list  govuk-list--bullet" >
                                     <li><a href="manual-home?manual={{_employerManual}}">employers</a></li>
@@ -308,7 +308,7 @@
                                     <li><a href="manual-home?manual={{_providerManual}}">training providers</a></li>
                                 </ul>
 
-                                <p class="govuk-body">You can also download the latest apprenticeship funding rules as PDF files:</p>
+                                <p class="govuk-body">Download the latest rules for:</p>
                                 <ul class="govuk-list  govuk-list--bullet" >
                                     <li><a href="#">employers</a> (PDF, 500KB, 50 pages)</li>
                                     <li><a href="#">employer-providers</a> (PDF, 500KB, 50 pages)</li>
