link to pdf versions

--- a/app/views/8-0/manual-home.html
+++ b/app/views/8-0/manual-home.html
@@ -88,7 +88,7 @@
                 <a href="rules-years" class="govuk-link govuk-link--no-visited-state">View the rules in alternative formats (including PDF)</a> which you can download, print and view offline.
             </div> -->
 
-            <!-- <p class="govuk-body">You can <a href="{{_pdfURL}}" class="govuk-link govuk-link--no-visited-state">download {{_thisManual.title|lower|safe}} (PDF, 89KB)</a>.</p> -->
+            <p class="govuk-body"><a href="rules-years" class="govuk-link govuk-link--no-visited-state">View the funding rules in PDF format</a>.</p>
 
             <p class="govuk-body"><a href="https://www.gov.uk/email-signup/?topic=/education/apprenticeships-funding" class="govuk-link govuk-link--no-visited-state">Sign up for email alerts</a> for changes to the apprenticeships funding topic page.</p>
 
