--- a/app/views/8-0/rules-years.html
+++ b/app/views/8-0/rules-years.html
@@ -281,7 +281,7 @@
                                     The latest rules (2018 to 2019)
                                 </h2>
                                 <div class="call-to-action">
-                                    <p class="govuk-body">There are different funding rules for different apprenticeship start dates. You must follow the funding rules that apply to each apprentice.</p>
+                                    <p class="govuk-body">Information about funding for training and assessing apprentices in England.</p>
                                 </div>
 
                                 <!-- Employer manual ID -->
@@ -308,7 +308,7 @@
                                     <li><a href="manual-home?manual={{_providerManual}}">training providers</a></li>
                                 </ul>
 
-                                <p class="govuk-body">Download the latest rules for:</p>
+                                <p class="govuk-body">View the funding rules in PDF format for:</p>
                                 <ul class="govuk-list  govuk-list--bullet" >
                                     <li><a href="#">employers</a> (PDF, 500KB, 50 pages)</li>
                                     <li><a href="#">employer-providers</a> (PDF, 500KB, 50 pages)</li>
