--- a/app/views/8-0/rules-years.html
+++ b/app/views/8-0/rules-years.html
@@ -198,7 +198,7 @@
                 </div>
                 <div class="column-two-thirds">
                     <p class="gem-c-lead-paragraph ">
-                        Information about the rules for the government funding that covers the costs of off-the-job training for apprentices in England.
+                        Information about funding for training and assessing apprentices in England.
                     </p>
                 </div>
             </div>
@@ -281,7 +281,7 @@
                                     The latest rules (2018 to 2019)
                                 </h2>
                                 <div class="call-to-action">
-                                    <p class="govuk-body">Information about funding for training and assessing apprentices in England.</p>
+                                    <p class="govuk-body">There are different funding rules for different apprenticeship start dates. You must follow the funding rules that apply to each apprentice.</p>
                                 </div>
 
                                 <!-- Employer manual ID -->
