dates on homepages

--- a/app/views/8-0/manual-home.html
+++ b/app/views/8-0/manual-home.html
@@ -80,7 +80,7 @@
             </p>
 
             <div class="call-to-action">
-                <p class="govuk-body govuk-!-font-weight-bold">These are the latest rules ({{_thisManual.date|safe}})</span></p><br>
+                <p class="govuk-body govuk-!-font-weight-bold">These are the latest rules (1 August 2018 to 31 July 2019)</span></p><br>
                 <p class="govuk-body">If the apprenticeship started before 1 August 2018, <a href="rules-years" class="govuk-link govuk-link--no-visited-state">view the funding rules for previous years</a>.</p>
             </div>
             
