fixed broken external stylesheet

--- a/app/views/8-0/rules-years.html
+++ b/app/views/8-0/rules-years.html
@@ -34,11 +34,20 @@
     <link rel="apple-touch-icon" href="https://assets.publishing.service.gov.uk/static/apple-touch-icon-a318f305290c523aed80082456175b46c95350c0eeac93f42e78a71c7a55544e.png">
     <meta name="theme-color" content="#0b0c0c">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+
+
     <!--[if gt IE 8]><!-->
-    <link rel="stylesheet" media="screen" href="https://assets.publishing.service.gov.uk/static/core-layout-5c3d985d43c06c7c5efa157f99dcc22b3b62fcc9944669d4237fc2b78793baf2.css"
-        crossorigin="anonymous" integrity="sha256-XD2YXUPAbHxe+hV/mdzCKzti/MmURmnUI3/Ct4eTuvI=">
-    <link rel="stylesheet" media="print" href="https://assets.publishing.service.gov.uk/static/core-layout-print-9a2de3ce1590c8ca478a6f7edf5a2e4bad0c6291b1dd4a6e7ca85f653d9591b4.css"
-        crossorigin="anonymous" integrity="sha256-mi3jzhWQyMpHim9+31ouS60MYpGx3UpufKhfZT2VkbQ=">
+    <!-- <link rel="stylesheet" media="screen" href="https://assets.publishing.service.gov.uk/static/core-layout-5c3d985d43c06c7c5efa157f99dcc22b3b62fcc9944669d4237fc2b78793baf2.css" crossorigin="anonymous" integrity="sha256-XD2YXUPAbHxe+hV/mdzCKzti/MmURmnUI3/Ct4eTuvI="> -->
+    <link rel="stylesheet" media="screen" href="/public/css/core-layout.css" crossorigin="anonymous" >
+   
+
+
+<!--         
+    <link rel="stylesheet" media="print" href="https://assets.publishing.service.gov.uk/static/core-layout-print-9a2de3ce1590c8ca478a6f7edf5a2e4bad0c6291b1dd4a6e7ca85f653d9591b4.css" crossorigin="anonymous" integrity="sha256-mi3jzhWQyMpHim9+31ouS60MYpGx3UpufKhfZT2VkbQ="> -->
+
+
+
     <meta property="og:image" content="https://assets.publishing.service.gov.uk/static/opengraph-image-a1f7d89ffd0782738b1aeb0da37842d8bd0addbd724b8e58c3edbc7287cc11de.png">
     <!--[if gt IE 8]><!-->
     <link rel="stylesheet" media="screen" href="https://assets.publishing.service.gov.uk/government-frontend/application-b6ad63f5aadc34d97304be8af907320307342bb63840a5e70b20e4c7ce2d3c18.css"
