update to home to include perf mgmt text

--- a/app/views/8-0/rules-years.html
+++ b/app/views/8-0/rules-years.html
@@ -337,7 +337,7 @@
                                     </li>
                                     <li>
                                         <a href="https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/733046/Apps_1819_PM_rules_.pdf">
-                                            apprenticeship performance management rules for training providers
+                                            apprenticeship performance-management rules for training providers
                                         </a> (PDF, 500KB, 50 pages)
                                     </li>
                                 </ul>
@@ -366,7 +366,7 @@
                                     </li>
                                     <li>
                                         <a href="https://www.gov.uk/government/uploads/system/uploads/attachment_data/file/706507/Provider_v6.pdf">
-                                            training providers
+                                            training providers - includes performance-management rules 
                                         </a> (PDF, 500KB, 50 pages)
                                     </li>
                                 </ul>
@@ -378,10 +378,10 @@
                                 <p>You can also view:</p>
                                 <ul class="govuk-list govuk-list--bullet">
                                         <li>
-                                            <a href="https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/697128/Summary_of_changes.pdf">apprenticeship funding and performance management rules 2017 to 2018: summary of changes</a> (PDF, 500KB, 50 pages)
+                                            <a href="https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/697128/Summary_of_changes.pdf">apprenticeship funding and performance-management rules 2017 to 2018: summary of changes</a> (PDF, 500KB, 50 pages)
                                         </li>
                                         <li>
-                                            <a href="https://www.gov.uk/government/uploads/system/uploads/attachment_data/file/611724/Subcontracting_addendum__003_.pdf">apprenticeship funding and performance management rules - addendum 1</a> (PDF, 500KB, 50 pages)
+                                            <a href="https://www.gov.uk/government/uploads/system/uploads/attachment_data/file/611724/Subcontracting_addendum__003_.pdf">apprenticeship funding and performance-management rules - addendum 1</a> (PDF, 500KB, 50 pages)
                                         </li>
                                     </ul>
 
