--- a/app/views/7-0/rules-years.html
+++ b/app/views/7-0/rules-years.html
@@ -42,8 +42,9 @@
         crossorigin="anonymous" integrity="sha256-mi3jzhWQyMpHim9+31ouS60MYpGx3UpufKhfZT2VkbQ="> -->
     <meta property="og:image" content="https://assets.publishing.service.gov.uk/static/opengraph-image-a1f7d89ffd0782738b1aeb0da37842d8bd0addbd724b8e58c3edbc7287cc11de.png">
     <!--[if gt IE 8]><!-->
-    <link rel="stylesheet" media="screen" href="https://assets.publishing.service.gov.uk/government-frontend/application-b6ad63f5aadc34d97304be8af907320307342bb63840a5e70b20e4c7ce2d3c18.css"
-        crossorigin="anonymous" integrity="sha256-tq1j9arcNNlzBL6K+QcyAwc0K7Y4QKXnCyDkx84tPBg=">
+    <!-- <link rel="stylesheet" media="screen" href="https://assets.publishing.service.gov.uk/government-frontend/application-b6ad63f5aadc34d97304be8af907320307342bb63840a5e70b20e4c7ce2d3c18.css"
+        crossorigin="anonymous" integrity="sha256-tq1j9arcNNlzBL6K+QcyAwc0K7Y4QKXnCyDkx84tPBg="> -->
+        <link rel="stylesheet" media="screen" href="/public/css/government-frontend-application.css" crossorigin="anonymous" >
     <!--<![endif]-->
     <link rel="stylesheet" media="print" href="https://assets.publishing.service.gov.uk/government-frontend/print-a9af06f0e0ff57a3916f6700715b87afc2f8c596fc6b03aa7b8ef4cbb8bdbb58.css"
         crossorigin="anonymous" integrity="sha256-qa8G8OD/V6ORb2cAcVuHr8L4xZb8awOqe470y7i9u1g=">
