title changed and survey link added

--- a/app/views/8-0/rules-years.html
+++ b/app/views/8-0/rules-years.html
@@ -435,7 +435,11 @@
 
 <p><a href="https://www.gov.uk/guidance/sfa-funding-rules">View previous funding rules</a> for apprenticeships that started before 1 August 2016.</p>
 
-<h2 id="help-and-support">Help and support</h2>
+<h2 id="help-and-support">Contact us</h2>
+
+<div class="call-to-action">
+    <p><a rel="external" href="https://www.smartsurvey.co.uk/s/2CJEQ/">Complete our survey</a> to help us make the funding rules clearer.</p>
+</div>
 
 <h3 id="training-providers">Training providers</h3>
 
