survey link added to top of every section page

--- a/app/views/8-0/manual-page.html
+++ b/app/views/8-0/manual-page.html
@@ -233,6 +233,10 @@
                     <div class="collapsible-subsections">
                         <div class="gem-c-govspeak govuk-govspeak parts-container">
 
+                            <div class="call-to-action">
+                                <p><a rel="external" href="https://www.smartsurvey.co.uk/s/2CJEQ/">Complete our survey</a> to help us make the funding rules clearer.</p>
+                            </div>
+
                             {% for subsection in section.subsections %}
 
                                 <!-- Classes for if section contains updates -->
