glindex work, updating to match live

--- a/app/views/8-0/manual-home.html
+++ b/app/views/8-0/manual-home.html
@@ -96,6 +96,10 @@
 
             <p class="govuk-body"><a href="https://www.gov.uk/email-signup/?topic=/education/apprenticeships-funding" class="govuk-link govuk-link--no-visited-state">Sign up for email alerts</a> for changes to the apprenticeships funding topic page.</p>
 
+            <!-- <div class="call-to-action"> -->
+                    <!-- <p class="govuk-body"><a rel="external" href="https://www.smartsurvey.co.uk/s/2CJEQ/" class="govuk-link govuk-link--no-visited-state">Complete our survey</a> to help us make the funding rules clearer.</p> -->
+                <!-- </div> -->
+
             {% set _manualHasUpdates = false %}
             {% for section in _thisManual.sections %}
                 {% if section["updates-section"] %}
