--- a/app/views/8-0/manual-page.html
+++ b/app/views/8-0/manual-page.html
@@ -79,11 +79,13 @@
                     Contact us
                 </h1>
                 <p class="summary">
-                    How to get help, support and send feedback. 
+                    How to get help, support and send feedback.
                 </p>
                 <div class="gem-c-govspeak govuk-govspeak">
-                    <h3 class="govuk-heading-m">Feedback</h3>
-                    <p class="govuk-body"><a href="https://www.smartsurvey.co.uk/s/fundingrules/">Complete our survey</a> to help us make the funding rules clearer.</p>
+                    <div class="call-to-action">
+                        <p class="govuk-body"><a href="https://www.smartsurvey.co.uk/s/2CJEQ/">Complete our survey</a> to help us make the funding rules clearer.</p>
+                    </div>
+                    
                     <h3 class="govuk-heading-m">Training providers</h3>
                     <p class="govuk-body">For help and support you can:</p>
                     <ul class="govuk-list govuk-list--bullet">
@@ -102,9 +104,7 @@
                 <p class="summary">
                     See a list of all updates that we have made to the rules since 1 August 2018.
                 </p>
-                <!-- <div class="gem-c-govspeak govuk-govspeak">
-                    <h2 class="govuk-heading-s">Chapter name</h2>
-                </div> -->
+
                 <div class="js-collapsible-collection subsection-collection" data-collapse-depth="1">
                     <div class="collapsible-subsections">
                         <div class="gem-c-govspeak govuk-govspeak parts-container">
@@ -124,7 +124,6 @@
                                 <li><span style="font-weight:bold">EP131.3</span> – Clarification: Updated to reflect that in the case of redundant apprentices the provider can act as the proxy employer.
                                 </li>
                             </ul>
-
 
                         </div>
                     </div>
