--- a/app/views/includes/head.html
+++ b/app/views/includes/head.html
@@ -1,2 +1,6 @@
+<!-- <link rel="stylesheet" media="screen" href="/public/css/core-layout.css" crossorigin="anonymous" >
+<link rel="stylesheet" media="screen" href="/public/css/government-frontend-application.css" crossorigin="anonymous" > -->
+
 <!--[if lte IE 8]><link href="/public/stylesheets/application-ie8.css" rel="stylesheet" type="text/css" /><![endif]-->
 <!--[if gt IE 8]><!--><link href="/public/stylesheets/application.css" media="all" rel="stylesheet" type="text/css" /><!--<![endif]-->
+
