--- a/app/views/index.html
+++ b/app/views/index.html
@@ -16,9 +16,15 @@
         <h2 class="govuk-heading-m">UI Versions</h2>
         <ul class="govuk-list govuk-list--bullet govuk-!-font-size-24">
             <li>
-                <a href="/8-0/manual-setup" class="govuk-link govuk-link--no-visited-state">V-8-0</a> (in progress)
+                <a href="/9-0/manual-setup" class="govuk-link govuk-link--no-visited-state">V-9-0</a> (in progress)
                 <ul class="govuk-list govuk-list--bullet govuk-!-font-size-19">
-                    <li><span class="govuk-!-font-weight-bold">years hub</span> - pdf links, months and survey link added</li>
+                    <li><span class="govuk-!-font-weight-bold">glindex</span> - glindex replaces the glossary section</li>
+                </ul>
+            </li>
+            <li>
+                <a href="/8-0/manual-setup" class="govuk-link govuk-link--no-visited-state">V-8-0</a>
+                <ul class="govuk-list govuk-list--bullet govuk-!-font-size-19">
+                    <li><span class="govuk-!-font-weight-bold">MATCHES 15/03 release</span> - this prototype matches the live release on 15 March 2019</li>
                 </ul>
             </li>
             <li>
