--- a/app/views/5-0/rules-list.html
+++ b/app/views/5-0/rules-list.html
@@ -62,9 +62,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!--[if gt IE 8]><!-->
-  <link rel="stylesheet" media="screen" href="https://assets.publishing.service.gov.uk/static/core-layout-5c3d985d43c06c7c5efa157f99dcc22b3b62fcc9944669d4237fc2b78793baf2.css"
-    crossorigin="anonymous" integrity="sha256-XD2YXUPAbHxe+hV/mdzCKzti/MmURmnUI3/Ct4eTuvI=">
- 
+  <!-- <link rel="stylesheet" media="screen" href="https://assets.publishing.service.gov.uk/static/core-layout-5c3d985d43c06c7c5efa157f99dcc22b3b62fcc9944669d4237fc2b78793baf2.css"
+    crossorigin="anonymous" integrity="sha256-XD2YXUPAbHxe+hV/mdzCKzti/MmURmnUI3/Ct4eTuvI="> -->
+    <link rel="stylesheet" media="screen" href="/public/css/core-layout.css" crossorigin="anonymous" >
 
   <link rel="stylesheet" media="print" href="https://assets.publishing.service.gov.uk/static/core-layout-print-9a2de3ce1590c8ca478a6f7edf5a2e4bad0c6291b1dd4a6e7ca85f653d9591b4.css"
     crossorigin="anonymous" integrity="sha256-mi3jzhWQyMpHim9+31ouS60MYpGx3UpufKhfZT2VkbQ=">
@@ -73,8 +73,9 @@
 
   <meta property="og:image" content="https://assets.publishing.service.gov.uk/static/opengraph-image-a1f7d89ffd0782738b1aeb0da37842d8bd0addbd724b8e58c3edbc7287cc11de.png">
   <!--[if gt IE 8]><!-->
-  <link rel="stylesheet" media="screen" href="https://assets.publishing.service.gov.uk/government-frontend/application-b6ad63f5aadc34d97304be8af907320307342bb63840a5e70b20e4c7ce2d3c18.css"
-    crossorigin="anonymous" integrity="sha256-tq1j9arcNNlzBL6K+QcyAwc0K7Y4QKXnCyDkx84tPBg=">
+  <!-- <link rel="stylesheet" media="screen" href="https://assets.publishing.service.gov.uk/government-frontend/application-b6ad63f5aadc34d97304be8af907320307342bb63840a5e70b20e4c7ce2d3c18.css"
+    crossorigin="anonymous" integrity="sha256-tq1j9arcNNlzBL6K+QcyAwc0K7Y4QKXnCyDkx84tPBg="> -->
+    <link rel="stylesheet" media="screen" href="/public/css/government-frontend-application.css" crossorigin="anonymous" >
   <!--<![endif]-->
   <link rel="stylesheet" media="print" href="https://assets.publishing.service.gov.uk/government-frontend/print-a9af06f0e0ff57a3916f6700715b87afc2f8c596fc6b03aa7b8ef4cbb8bdbb58.css"
     crossorigin="anonymous" integrity="sha256-qa8G8OD/V6ORb2cAcVuHr8L4xZb8awOqe470y7i9u1g=">
