--- a/app/views/index.html
+++ b/app/views/index.html
@@ -19,6 +19,7 @@
                 <a href="/9-0/manual-setup" class="govuk-link govuk-link--no-visited-state">V-9-0</a> (in progress)
                 <ul class="govuk-list govuk-list--bullet govuk-!-font-size-19">
                     <li><span class="govuk-!-font-weight-bold">glindex</span> - glindex replaces the glossary section</li>
+                    <li><span class="govuk-!-font-weight-bold">survey</span> - additional links added</li>
                 </ul>
             </li>
             <li>
