--- a/app/views/9-0/rules-years.html
+++ b/app/views/9-0/rules-years.html
@@ -274,10 +274,10 @@
           <a class="gem-c-contents-list__link " data-track-category="contentsClicked" data-track-action="content_item 1" data-track-label="#the-latest-rules-2018-to-2019" data-track-options='{"dimension29":"The latest rules (2018 to 2019)"}' href="#the-latest-rules-2018-to-2019">The latest rules (2018 to 2019)</a>
         </li>
         <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed ">
-          <a class="gem-c-contents-list__link " data-track-category="contentsClicked" data-track-action="content_item 2" data-track-label="#to-2018-rules" data-track-options='{"dimension29":"2017 to 2018 rules"}' href="#to-2018-rules">2017 to 2018 rules</a>
+          <a class="gem-c-contents-list__link " data-track-category="contentsClicked" data-track-action="content_item 2" data-track-label="#to-2018-rules" data-track-options='{"dimension29":"2017 to 2018 rules"}' href="#the-2017-to-2018-rules">2017 to 2018 rules</a>
         </li>
         <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed ">
-          <a class="gem-c-contents-list__link " data-track-category="contentsClicked" data-track-action="content_item 3" data-track-label="#to-2017-rules" data-track-options='{"dimension29":"2016 to 2017 rules"}' href="#to-2017-rules">2016 to 2017 rules</a>
+          <a class="gem-c-contents-list__link " data-track-category="contentsClicked" data-track-action="content_item 3" data-track-label="#to-2017-rules" data-track-options='{"dimension29":"2016 to 2017 rules"}' href="#the-2016-to-2017-rules">2016 to 2017 rules</a>
         </li>
         <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed ">
           <a class="gem-c-contents-list__link " data-track-category="contentsClicked" data-track-action="content_item 4" data-track-label="#previous-rules" data-track-options='{"dimension29":"Previous rules"}' href="#previous-rules">Previous rules</a>
@@ -381,7 +381,7 @@
 <p>We also run <a rel="external" href="https://www.eventbrite.co.uk/o/apprenticeship-service-webinars-18113241310">regular webinars</a> to update employers and training providers about any new developments.</p>
 </div>
 
-<h2 id="to-2018-rules">2017 to 2018 rules</h2>
+<h2 id="the-2017-to-2018-rules">The 2017 to 2018 rules</h2>
 
 <p>The 2017 to 2018 rules apply to apprenticeships that started between 1 August 2017 and 31 July 2018.</p>
 
@@ -427,7 +427,7 @@
   </li>
 </ul>
 
-<h2 id="to-2017-rules">2016 to 2017 rules</h2>
+<h2 id="the-2016-to-2017-rules">The 2016 to 2017 rules</h2>
 
 <p><a href="https://www.gov.uk/government/collections/sfa-funding-rules-2016-to-2017">View the 2016 to 2017 funding rules</a> for apprenticeships that started between 1 August 2016 and 31 July 2017.</p>
 
